# hello-world-landing

./: .env.example  Dockerfile  README.md  docker-compose.yml  next.config.js  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts
app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
backend/: Dockerfile  __init__.py  docker-compose.yml  jest.config.js  main.py  package-lock.json  package.json
backend/public/: 404.html  index.html
backend/src/: index.js  server.js
backend/static/: index.html
backend/tests/: __init__.py  static.test.js  test_main.py
backend/tests/integration/: static.test.js
backend/tests/unit/: static.test.js
lib/: animations.ts  api.ts
public/: hello-world.html  hello.html
